# nginx-upstream-configure

./: .gitignore  .npmignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: main.rs
test/: Corefile  app2.yml  app_default.conf  db.example.com  default.conf  default2.conf  docker-compose.yml  test.sh  utils.sh
test/app1/: index.txt  index2.txt
test/app2/: index.txt  index2.txt
test/app3/: index.txt  index2.txt
test/upstreams.d/: app.yml
